// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneEnrollmentCodeTransformer Tests should create phone code enrollment UI elements with sms as the first method type 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.verify.sms.codeSentText oie.phone.alternate.title. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneEnrollmentCodeTransformer Tests should create phone code enrollment UI elements with sms as the first method type and phoneNumber in profile 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.verify.sms.codeSentText <span class="strong no-translate">&lrm;1215XXXXXX8.</span> oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneEnrollmentCodeTransformer Tests should create phone code enrollment UI elements with voice as the first method type 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "mfa.calling oie.phone.alternate.title. oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`PhoneEnrollmentCodeTransformer Tests should create phone code enrollment UI elements with voice as the first method type and phoneNumber in profile 1`] = `
{
  "data": {},
  "dataSchema": {
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "oie.phone.enroll.title",
        },
        "type": "Title",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "mfa.calling <span class="strong no-translate">&lrm;1215XXXXXX8.</span> oie.phone.verify.enterCodeText",
        },
        "type": "Description",
      },
      {
        "contentType": "subtitle",
        "options": {
          "content": "oie.phone.carrier.charges",
        },
        "type": "Description",
      },
      {
        "label": "mfa.challenge.verify",
        "options": {
          "step": "",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
